collection.log
=== [2026-02-07_15-16] 开始收集 ===
收集Skills...
- 找到       53 个Skills
收集Docs...
- 找到      617 个文档
生成技能摘要...
更新索引...
=== [2026-02-07_15-16] 收集完成 ===
收集完成！时间: 2026-02-07_15-16
=== [2026-02-07_15-24] 开始收集 ===
收集Skills...
- 找到       53 个Skills
收集Docs...
- 找到      617 个文档
生成技能摘要...
更新索引...
=== [2026-02-07_15-24] 收集完成 ===
收集完成！时间: 2026-02-07_15-24
推送到GitHub...
[main a03dfeb] Auto-collect: 2026-02-07_15-24
 Committer: xie xie <xiexie@xiedeMac-mini.local>
Your name and email address were configured automatically based
on your username and hostname. Please check that they are accurate.
You can suppress this message by setting them explicitly. Run the
following command and follow the instructions in your editor to edit
your configuration file:

    git config --global --edit

After doing this, you may fix the identity used for this commit with:

    git commit --amend --reset-author

 8 files changed, 915 insertions(+), 3 deletions(-)
 create mode 100644 data/2026-02-07_15-24/docs_dirs_2026-02-07_15-24.txt
 create mode 100644 data/2026-02-07_15-24/docs_list_2026-02-07_15-24.txt
 create mode 100644 data/2026-02-07_15-24/docs_tree_2026-02-07_15-24.txt
 create mode 100644 data/2026-02-07_15-24/skills_list_2026-02-07_15-24.txt
 create mode 100644 data/2026-02-07_15-24/skills_summary_2026-02-07_15-24.md
To https://github.com/xpfasd/openclaw-collector.git
   2abc62a..a03dfeb  main -> main
GitHub同步完成
=== [2026-02-12_23-30] 开始收集 ===
收集Skills...
- 找到  个Skills
收集Docs...
- 找到  个文档
生成技能摘要...
生成技能数据...
更新site.json...
更新索引...
生成网站...
<anonymous_script>:10
    "totalSkills": ,
                   ^

SyntaxError: Unexpected token ',', ..."lSkills": ,
    "tot"... is not valid JSON
    at JSON.parse (<anonymous>)
    at Object.<anonymous> (/Users/xiexie/.openclaw/workspace/openclaw-site/generate.js:22:23)
    at Module._compile (node:internal/modules/cjs/loader:1803:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1934:10)
    at Module.load (node:internal/modules/cjs/loader:1524:32)
    at Module._load (node:internal/modules/cjs/loader:1326:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:245:24)
    at Module.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:154:5)
    at node:internal/main/run_main_module:33:47

Node.js v25.5.0
推送到GitHub...
